Fix 'reconciliation removes the history'

In MyMoneyAccount::addReconciliation(), make sure, that the associated
member m_reconciliationHistory is loaded from the key value pair, which
is performed by calling reconciliationHistory().

BUG: 433694
FIXED-IN: 4.8.5,5.1.2
(cherry picked from commit 11ccaa9ba7eb78d5c05139de02e46e809511e290)